--- a/html/projects.html
+++ b/html/projects.html
@@ -33,7 +33,7 @@
 	<body onload="load()">
 		<div class="topBanner"></div>
 		<div class="row">
-			<div class="col-12" id="topBar">
+			<div class="col-12 col-m-12" id="topBar">
 				<img class="menuIcon" id="menu" src="../images/icons/menu.png" />
 				<ul id="navigation">
 					<li id="home"><b><a href="../index.html">Home</a></b></li>
@@ -44,41 +44,90 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12 showcase">
+			<div class="col-12 col-m-12 showcase">
 				<h1>Music Theory Keyboard</h1>
-				<div class="container">
-				<div id="keyboard">
-					<!-- keyboard keys that call functions to play corresponding note when clicked --><!--
-					--><div class="key lStraightKey" id="c3Key" onclick="contextualClick('c', 3, this.id)"><div class="hardwareName">q</div><div class="keyName">C</div></div><!--
-					--><div class="key blackKey" id="db3Key" onclick="contextualClick('db', 3, this.id)"><div class="hardwareName">2</div><div class="keyName">C<sup>#</sup> D<sup>b</sup></div></div><!--
-					--><div class="key cutKey" id="d3Key" onclick="contextualClick('d', 3, this.id)"><div class="hardwareName">w</div><div class="keyName">D</div></div><!--
-					--><div class="key blackKey" id="eb3Key" onclick="contextualClick('eb', 3, this.id)"><div class="hardwareName">3</div><div class="keyName">D<sup>#</sup> E<sup>b</sup></div></div><!--
-					--><div class="key rStraightKey" id="e3Key" onclick="contextualClick('e', 3, this.id)"><div class="hardwareName">e</div><div class="keyName">E</div></div><!--
-					--><div class="key lStraightKey" id="f3Key" onclick="contextualClick('f', 3, this.id)"><div class="hardwareName">r</div><div class="keyName">F</div></div><!--
-					--><div class="key blackKey" id="gb3Key" onclick="contextualClick('gb', 3, this.id)"><div class="hardwareName">5</div><div class="keyName">F<sup>#</sup> G<sup>b</sup></div></div><!--
-					--><div class="key cutKey" id="g3Key" onclick="contextualClick('g', 3, this.id)"><div class="hardwareName">t</div><div class="keyName">G</div></div><!--
-					--><div class="key blackKey" id="ab4Key" onclick="contextualClick('ab', 4, this.id)"><div class="hardwareName">6</div><div class="keyName">G<sup>#</sup> A<sup>b</sup></div></div><!--
-					--><div class="key cutKey" id="a4Key" onclick="contextualClick('a', 4, this.id)"><div class="hardwareName">y</div><div class="keyName">A</div></div><!--
-					--><div class="key blackKey" id="bb4Key" onclick="contextualClick('bb', 4, this.id)"><div class="hardwareName">7</div><div class="keyName">A<sup>#</sup> B<sup>b</sup></div></div><!--
-					--><div class="key rStraightKey" id="b4Key" onclick="contextualClick('b', 4, this.id)"><div class="hardwareName">u</div><div class="keyName">B</div></div><!--
-					--><div class="key lStraightKey" id="c4Key" onclick="contextualClick('c', 4, this.id)"><div class="hardwareName">i</div><div class="keyName">C</div></div><!--
-					--><div class="key blackKey" id="db4Key" onclick="contextualClick('db', 4, this.id)"><div class="hardwareName">9</div><div class="keyName">C<sup>#</sup> D<sup>b</sup></div></div><!--
-					--><div class="key cutKey" id="d4Key" onclick="contextualClick('d', 4, this.id)"><div class="hardwareName">o</div><div class="keyName">D</div></div><!--
-					--><div class="key blackKey" id="eb4Key" onclick="contextualClick('eb', 4, this.id)"><div class="hardwareName">0</div><div class="keyName">D<sup>#</sup> E<sup>b</sup></div></div><!--
-					--><div class="key rStraightKey" id="e4Key" onclick="contextualClick('e', 4, this.id)"><div class="hardwareName">p</div><div class="keyName">E</div></div><!--
-					--><div class="key lStraightKey" id="f4Key" onclick="contextualClick('f', 4, this.id)"><div class="hardwareName">z</div><div class="keyName">F</div></div><!--
-					--><div class="key blackKey" id="gb4Key" onclick="contextualClick('gb', 4, this.id)"><div class="hardwareName">s</div><div class="keyName">F<sup>#</sup> G<sup>b</sup></div></div><!--
-					--><div class="key cutKey" id="g4Key" onclick="contextualClick('g', 4, this.id)"><div class="hardwareName">x</div><div class="keyName">G</div></div><!--
-					--><div class="key blackKey" id="ab5Key" onclick="contextualClick('ab', 5, this.id)"><div class="hardwareName">d</div><div class="keyName">G<sup>#</sup> A<sup>b</sup></div></div><!--
-					--><div class="key cutKey" id="a5Key" onclick="contextualClick('a', 5, this.id)"><div class="hardwareName">c</div><div class="keyName">A</div></div><!--
-					--><div class="key blackKey" id="bb5Key" onclick="contextualClick('bb', 5, this.id)"><div class="hardwareName">f</div><div class="keyName">A<sup>#</sup> B<sup>b</sup></div></div><!--
-					--><div class="key rStraightKey" id="b5Key" onclick="contextualClick('b', 5, this.id)"><div class="hardwareName">v</div><div class="keyName">B</div></div><!--
-					--><div class="key lStraightKey" id="c5Key" onclick="contextualClick('c', 5, this.id)"><div class="hardwareName">b</div><div class="keyName">C</div></div><!--
-					--><div class="key blackKey" id="db5Key" onclick="contextualClick('db', 5, this.id)"><div class="hardwareName">h</div><div class="keyName">C<sup>#</sup> D<sup>b</sup></div></div><!--
-					--><div class="key cutKey" id="d5Key" onclick="contextualClick('d', 5, this.id)"><div class="hardwareName">n</div><div class="keyName">D</div></div><!--
-					--><div class="key blackKey" id="eb5Key" onclick="contextualClick('eb', 5, this.id)"><div class="hardwareName">j</div><div class="keyName">D<sup>#</sup> E<sup>b</sup></div></div><!--
-					--><div class="key rStraightKey" id="e5Key" onclick="contextualClick('e', 5, this.id)"><div class="hardwareName">m</div><div class="keyName">E</div></div>
+				<div class="col-12 col-m-12 container">
+					<div id="keyboard">
+						<!-- keyboard keys that call functions to play corresponding note when clicked --><!--
+						--><div class="key lStraightKey" id="c3Key" onclick="contextualClick('c', 3, this.id)"><div class="hardwareName">q</div><div class="keyName">C</div></div><!--
+						--><div class="key blackKey" id="db3Key" onclick="contextualClick('db', 3, this.id)"><div class="hardwareName">2</div><div class="keyName">C<sup>#</sup> D<sup>b</sup></div></div><!--
+						--><div class="key cutKey" id="d3Key" onclick="contextualClick('d', 3, this.id)"><div class="hardwareName">w</div><div class="keyName">D</div></div><!--
+						--><div class="key blackKey" id="eb3Key" onclick="contextualClick('eb', 3, this.id)"><div class="hardwareName">3</div><div class="keyName">D<sup>#</sup> E<sup>b</sup></div></div><!--
+						--><div class="key rStraightKey" id="e3Key" onclick="contextualClick('e', 3, this.id)"><div class="hardwareName">e</div><div class="keyName">E</div></div><!--
+						--><div class="key lStraightKey" id="f3Key" onclick="contextualClick('f', 3, this.id)"><div class="hardwareName">r</div><div class="keyName">F</div></div><!--
+						--><div class="key blackKey" id="gb3Key" onclick="contextualClick('gb', 3, this.id)"><div class="hardwareName">5</div><div class="keyName">F<sup>#</sup> G<sup>b</sup></div></div><!--
+						--><div class="key cutKey" id="g3Key" onclick="contextualClick('g', 3, this.id)"><div class="hardwareName">t</div><div class="keyName">G</div></div><!--
+						--><div class="key blackKey" id="ab4Key" onclick="contextualClick('ab', 4, this.id)"><div class="hardwareName">6</div><div class="keyName">G<sup>#</sup> A<sup>b</sup></div></div><!--
+						--><div class="key cutKey" id="a4Key" onclick="contextualClick('a', 4, this.id)"><div class="hardwareName">y</div><div class="keyName">A</div></div><!--
+						--><div class="key blackKey" id="bb4Key" onclick="contextualClick('bb', 4, this.id)"><div class="hardwareName">7</div><div class="keyName">A<sup>#</sup> B<sup>b</sup></div></div><!--
+						--><div class="key rStraightKey" id="b4Key" onclick="contextualClick('b', 4, this.id)"><div class="hardwareName">u</div><div class="keyName">B</div></div><!--
+						--><div class="key lStraightKey" id="c4Key" onclick="contextualClick('c', 4, this.id)"><div class="hardwareName">i</div><div class="keyName">C</div></div><!--
+						--><div class="key blackKey" id="db4Key" onclick="contextualClick('db', 4, this.id)"><div class="hardwareName">9</div><div class="keyName">C<sup>#</sup> D<sup>b</sup></div></div><!--
+						--><div class="key cutKey" id="d4Key" onclick="contextualClick('d', 4, this.id)"><div class="hardwareName">o</div><div class="keyName">D</div></div><!--
+						--><div class="key blackKey" id="eb4Key" onclick="contextualClick('eb', 4, this.id)"><div class="hardwareName">0</div><div class="keyName">D<sup>#</sup> E<sup>b</sup></div></div><!--
+						--><div class="key rStraightKey" id="e4Key" onclick="contextualClick('e', 4, this.id)"><div class="hardwareName">p</div><div class="keyName">E</div></div><!--
+						--><div class="key lStraightKey" id="f4Key" onclick="contextualClick('f', 4, this.id)"><div class="hardwareName">z</div><div class="keyName">F</div></div><!--
+						--><div class="key blackKey" id="gb4Key" onclick="contextualClick('gb', 4, this.id)"><div class="hardwareName">s</div><div class="keyName">F<sup>#</sup> G<sup>b</sup></div></div><!--
+						--><div class="key cutKey" id="g4Key" onclick="contextualClick('g', 4, this.id)"><div class="hardwareName">x</div><div class="keyName">G</div></div><!--
+						--><div class="key blackKey" id="ab5Key" onclick="contextualClick('ab', 5, this.id)"><div class="hardwareName">d</div><div class="keyName">G<sup>#</sup> A<sup>b</sup></div></div><!--
+						--><div class="key cutKey" id="a5Key" onclick="contextualClick('a', 5, this.id)"><div class="hardwareName">c</div><div class="keyName">A</div></div><!--
+						--><div class="key blackKey" id="bb5Key" onclick="contextualClick('bb', 5, this.id)"><div class="hardwareName">f</div><div class="keyName">A<sup>#</sup> B<sup>b</sup></div></div><!--
+						--><div class="key rStraightKey" id="b5Key" onclick="contextualClick('b', 5, this.id)"><div class="hardwareName">v</div><div class="keyName">B</div></div><!--
+						--><div class="key lStraightKey" id="c5Key" onclick="contextualClick('c', 5, this.id)"><div class="hardwareName">b</div><div class="keyName">C</div></div><!--
+						--><div class="key blackKey" id="db5Key" onclick="contextualClick('db', 5, this.id)"><div class="hardwareName">h</div><div class="keyName">C<sup>#</sup> D<sup>b</sup></div></div><!--
+						--><div class="key cutKey" id="d5Key" onclick="contextualClick('d', 5, this.id)"><div class="hardwareName">n</div><div class="keyName">D</div></div><!--
+						--><div class="key blackKey" id="eb5Key" onclick="contextualClick('eb', 5, this.id)"><div class="hardwareName">j</div><div class="keyName">D<sup>#</sup> E<sup>b</sup></div></div><!--
+						--><div class="key rStraightKey" id="e5Key" onclick="contextualClick('e', 5, this.id)"><div class="hardwareName">m</div><div class="keyName">E</div></div>
+					</div>
 				</div>
+				<div class="keyboardOptions" onclick="toggleVisibility('#keyboardMenu')">Show Options</div>
+				<div class="col-12 col-m-12" id="keyboardMenu">
+					<div id="showKeys">
+						<div class="keyboardOptions" onclick="toggleVisibility('.keyName')">Toggle Key Names</div>
+						<div class="keyboardOptions" onclick="toggleVisibility('.hardwareName')">Toggle Hardware Key Names</div>
+					</div>
+					<br/><span>Highlight Options:</span><br/>
+					<div id="highlightOptions">
+						<div class="keyboardOptions" onclick="highlightMajorScale()">Toggle Major Scale</div>
+						<div class="keyboardOptions" onclick="highlightMinorScale()">Toggle Minor Scale</div>
+						<div class="keyboardOptions" onclick="highlightMajorChord()">Toggle Major Chord</div>
+						<div class="keyboardOptions" onclick="highlightMinorChord()">Toggle Minor Chord</div>
+						<div class="keyboardOptions" onclick="unhighlightAll()">Unhighlight</div>
+					</div>
+					<br/><span>Note Selection:</span><br/>
+					<div id="noteSelection">
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('c')">c</div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('db')">d<sup>b</sup></div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('d')">d</div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('eb')">e<sup>b</sup></div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('e')">e</div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('f')">f</div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('gb')">g<sup>b</sup></div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('g')">g</div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('ab')">a<sup>b</sup></div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('a')">a</div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('bb')">b<sup>b</sup></div>
+						<div class="keyboardOptions noteSelection" onclick="changeGlobalNote('b')">b</div>
+					</div>
+					<br/><span>Play Options:</span><br/>
+					<div id="conceptOptions">
+					<!-- These buttons are only used for testing and debugging purposes -->
+						<!-- <input type="button" onclick="playNote()" value="Play Root Note"/> -->
+						<div class="keyboardOptions" onclick="playMajorScale()">Play Major Scale</div>
+						<div class="keyboardOptions" onclick="playMinorScale()">Play Minor Scale</div>
+						<div class="keyboardOptions" onclick="playMajorTriChord()">Play Major Chord</div>
+						<div class="keyboardOptions" onclick="playMinorTriChord()">Play Minor Chord</div>
+					</div>
+					<br/><span>Tempo Selection:</span><br/>
+					<div id="tempoSelection">
+					<!-- To add a new tempo option simply create an input button and call setTempo 
+					with the desired value as the argument as shown below -->
+						<div class="keyboardOptions" onclick="setTempo(100)">slowest</div>
+						<div class="keyboardOptions" onclick="setTempo(120)">slow</div>
+						<div class="keyboardOptions" onclick="setTempo(140)">normal</div>
+						<div class="keyboardOptions" onclick="setTempo(160)">fast</div>
+						<div class="keyboardOptions" onclick="setTempo(180)">fastest</div>
+					</div>
 				</div>
 			</div>
 		</div>
