added sizing for keyboard option buttons

--- a/html/projects.html
+++ b/html/projects.html
@@ -88,11 +88,11 @@
 					</div>
 					<br/><span>Highlight Options:</span><br/>
 					<div id="highlightOptions">
-						<div class="keyboardOption" onclick="highlightMajorScale()">Toggle Major Scale</div>
-						<div class="keyboardOption" onclick="highlightMinorScale()">Toggle Minor Scale</div>
-						<div class="keyboardOption" onclick="highlightMajorChord()">Toggle Major Chord</div>
-						<div class="keyboardOption" onclick="highlightMinorChord()">Toggle Minor Chord</div>
-						<div class="keyboardOption" onclick="unhighlightAll()">Unhighlight</div>
+						<div class="keyboardOption highlightOption" onclick="highlightMajorScale()">Toggle Major Scale</div>
+						<div class="keyboardOption highlightOption" onclick="highlightMinorScale()">Toggle Minor Scale</div>
+						<div class="keyboardOption highlightOption" onclick="highlightMajorChord()">Toggle Major Chord</div>
+						<div class="keyboardOption highlightOption" onclick="highlightMinorChord()">Toggle Minor Chord</div>
+						<div class="keyboardOption highlightOption" onclick="unhighlightAll()">Unhighlight</div>
 					</div>
 					<br/><span>Note Selection:</span><br/>
 					<div id="noteSelection">
@@ -113,10 +113,10 @@
 					<div id="conceptOptions">
 					<!-- These buttons are only used for testing and debugging purposes -->
 						<!-- <input type="button" onclick="playNote()" value="Play Root Note"/> -->
-						<div class="keyboardOption" onclick="playMajorScale()">Play Major Scale</div>
-						<div class="keyboardOption" onclick="playMinorScale()">Play Minor Scale</div>
-						<div class="keyboardOption" onclick="playMajorTriChord()">Play Major Chord</div>
-						<div class="keyboardOption" onclick="playMinorTriChord()">Play Minor Chord</div>
+						<div class="keyboardOption conceptOption" onclick="playMajorScale()">Play Major Scale</div>
+						<div class="keyboardOption conceptOption" onclick="playMinorScale()">Play Minor Scale</div>
+						<div class="keyboardOption conceptOption" onclick="playMajorTriChord()">Play Major Chord</div>
+						<div class="keyboardOption conceptOption" onclick="playMinorTriChord()">Play Minor Chord</div>
 					</div>
 					<br/><span>Tempo Selection:</span><br/>
 					<div id="tempoSelection">
